# FRI_Challenger

./: .devcontainer.json  .prettierrc.json  Cargo.toml  Dockerfile  README.md  devcontainer.json  dhat-heap.json  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.docker/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: rust.yml
benches/: library_benchmark.rs  my_benchmark.rs
src/: castling.rs  game.rs  knight_attacks.rs  lib.rs  main.rs  pawn_attacks.rs  piece.rs  ray_attacks.rs  utils.rs
src/engine/: engine_s.rs  game.rs  mod.rs
src/engine/attacks/: all_attacks.rs  bishop.rs  king.rs  king_attacks.rs  knight.rs  knight_attacks.rs  mod.rs  pawn.rs  pawn_attacks.rs  pext.rs  queen.rs  ray_attacks.rs  rays.rs  rook.rs  utility.rs
src/engine/board/: board.rs  castling.rs  fen.rs  make_move.rs  mod.rs  moves.rs  mv_gen.rs  perft.rs  piece.rs  square.rs  state.rs  zobrist.rs
src/engine/board/structures/: board.rs  castling.rs  mod.rs  moves.rs  piece.rs  (+3 more)
src/engine/evaluation/: common_eval.rs  eval_defs.rs  evaluation.rs  imbalance_eval.rs  init_eval.rs  king_eval.rs  material_eval.rs  mobility_eval.rs  mod.rs  new_evaluation.rs  passed_pawn_eval.rs  pawn_eval.rs  piece_eval.rs  psqt_eval.rs  space_eval.rs  tempo_eval.rs  test_evaluation.rs  threats_eval.rs  trace_eval.rs
src/engine/fen/: fen.rs
src/engine/misc/: bit_pos_utility.rs  bitboard.rs  const_utility.rs  directions.rs  mod.rs  print_utility.rs
src/engine/move_generation/: fen.rs  make_move.rs  mod.rs  move_generation.rs  mv_gen.rs  perft.rs
src/engine/move_generator/: bishop.rs  king.rs  knight.rs  make_move.rs  mod.rs  mv_gen.rs  mv_oredering.rs  pawn.rs  perft.rs  queen.rs  rays.rs  rook.rs  utility.rs
src/engine/protocols/: mod.rs  time.rs  uci.rs  winboard.rs
src/engine/search/: alpha_beta.rs  evaluation.rs  info.rs  iter_deepening.rs  mod.rs  pawn_hash_table.rs  pvs.rs  quiescence.rs  searcher.rs  time.rs  transposition_table.rs
src/engine/shared/: mod.rs
src/new_engine/: bit_pos_utility.rs  board.rs  mod.rs  othr.rs  print_utility.rs
(+24 files in other folders)
