[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.3"
rand = "0.9.2"
num_enum = "0.7.4"
round = "0.1.2"
criterion="0.7.0"
pprof = { version = "0.15.0", features = ["flamegraph"] }
iai-callgrind = "0.16.1"
# bitintr="0.3.0"
# const_for = "0.1.5" 
clippy = "0.0.302"
crossbeam = "0.8.4"
indexmap = "2.11.0"
once_cell = "1.21.3"
dhat = "0.3.3"
nix = "0.30.1"

[features]
dhat-heap = []

[[bin]]
name = "chess-engine"
path = "src/main.rs"

[[bench]]
# name = "library_benchmark"
strip = false
debug = true
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1