[package]
name = "fri_challenger"
version = "0.5.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
rand = "0.9.2"
num_enum = "0.7.4"
criterion="0.7.0"
pprof = { version = "0.15.0", features = ["flamegraph"] }
iai-callgrind = "0.16.1"
clippy = "0.0.302"
once_cell = "1.21.3"
dhat = "0.3.3"
# bitintr="0.3.0"
# crossbeam = "0.8.4"
# const_for = "0.1.5" 
# round = "0.1.2"


[features]
dhat-heap = []

[[bin]]
name = "chess-engine"
path = "src/main.rs"

[[bench]]
# name = "library_benchmark"
strip = false
debug = true
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 1

[profile.test]  
opt-level = 1