[package]
name = "fri_challenger"
version = "0.6.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
criterion="0.7.0"
pprof = { version = "0.15.0", features = ["flamegraph"] }
iai-callgrind = "0.16.1"
clippy = "0.0.302"
# dhat = "0.3.3"


[features]
dhat-heap = []

[[bin]]
name = "FRI-Challenger"
path = "src/main.rs"

[[bench]]
# name = "library_benchmark"
strip = false
debug = true
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 1

[profile.test]  
opt-level = 1